infra/gitea/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: act-runner
  name: act-runner
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: act-runner
  strategy: {}
  template:
    metadata:
      namespace: gitea
      creationTimestamp: null
      labels:
        app: act-runner
    spec:
      restartPolicy: Always
      volumes:
        - name: runner-data
          persistentVolumeClaim:
            claimName: act-runner-vol
      securityContext:
        fsGroup: 1000
      containers:
        - name: runner
          image: gitea/act_runner:nightly-dind-rootless
          imagePullPolicy: Always
          #command: ["sh", "-c", "echo $GITEA_RUNNER_REGISTRATION_TOKEN; curl http://gitea-http.gitea.svc.cluster.local:3000"]
          securityContext:
            privileged: true
          volumeMounts:
            - name: runner-data
              mountPath: /data
