infra/gitea/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-http
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`git.k.joshuachp.dev`)"
      services:
        - name: gitea-http
          scheme: http
          port: 3000
  tls:
    secretName: cert-k-joshuachp-dev
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - ssh
  routes:
    - match: "HostSNI(`*`)"
      services:
        - name: gitea-ssh
          port: 22
